@@ -22,13 +22,11 @@
 
 #include <bits/wordsize.h>
 
-#ifdef __USE_LARGEFILE64
-# if __WORDSIZE == 64
+#if __WORDSIZE == 64
 /* Not necessary, files are always with 64bit off_t.  */
-#  define __O_LARGEFILE	0
-# else
-#  define __O_LARGEFILE	0100000
-# endif
+# define __O_LARGEFILE	0
+#else
+# define __O_LARGEFILE	0100000
 #endif
 
 /* Values for the second argument to `fcntl'.  */
