@@ -39,14 +39,11 @@
 #define __O_DIRECT	0x100000 /* direct disk access hint */
 #define __O_NOATIME	0x200000 /* Do not set atime.  */
 #define __O_PATH	0x1000000 /* Resolve pathname but do not open file.  */
-#endif
 
-#ifdef __USE_LARGEFILE64
-# if __WORDSIZE == 64
-#  define __O_LARGEFILE	0
-# else
-#  define __O_LARGEFILE	0x40000
-# endif
+#if __WORDSIZE == 64
+# define __O_LARGEFILE	0
+#else
+# define __O_LARGEFILE	0x40000
 #endif
 
 #define __O_DSYNC	0x2000	/* Synchronize data.  */
