@@ -1,5 +1,9 @@
 2012-10-22  Andreas Jaeger  <aj@suse.de>
 
+	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h (__O_LARGEFILE):
+	Define always.
+	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h (__O_LARGEFILE): Likewise.
+
 	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Add
 	bits/fcntl-linux.h.
 
